--- a/base/public/registrar_genero.html
+++ b/base/public/registrar_genero.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
     
-                <img src="imgs/panda color grain.png" alt="">
+                <img src="imgs/panda_grain.png" alt="">
     
                 <ul>
                     <li> <a href="">Usuario</a> </li>
