--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -17,7 +17,7 @@
 <header>
     <section id="navi">
 
-        <a href="index.html"> <img src="imgs/panda color grain.png" alt=""></a>
+        <a href="index.html"> <img src="imgs/panda_grain.png" alt=""></a>
 
         <button type="btn" class="sesion" id="">CerrarSesion</button>
 
@@ -42,7 +42,7 @@
                 <span class="close">&times;</span>
                 <div class="sign-in">
                     <h1>Nuevo Club de Lectura</h1>
-                    <img src="imgs/readingPanda.png" alt="">
+                    <img src="imgs/pandauser.png" alt="">
                     <div class="line"></div>
                     <form action="" id="formulario-ClubLectura">
                         <label for="txt-clubLectura">Nombre del Club de Lectura</label>
@@ -148,7 +148,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/controlador-listarClubLectura.js"></script>
     <script src="js/controlador-clubLectura.js"></script>
-    
+    <script src="js/noback.js"></script>
     <script src="js/servicio-clubLectura.js"></script>
 
 
