--- a/base/public/index.html
+++ b/base/public/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <section id="navi">
-            <a href="index.html"> <img src="imgs/panda color grain.png" alt=""></a>
+            <a href="index.html"> <img src="imgs/panda_grain.png" alt=""></a>
 
             <button type="btn" class="sesion" id="myBtn">Iniciar Sesion</button>
 
