--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -21,7 +21,7 @@
       
     <nav>
 
-        <img src="imgs/panda color grain.png" alt="">         
+        <img src="imgs/panda_grain.png" alt="">         
 
     </nav>
 
