--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -148,8 +148,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/controlador-listarClubLectura.js"></script>
     <script src="js/controlador-clubLectura.js"></script>
-    <script src="js/noback.js"></script>
     <script src="js/servicio-clubLectura.js"></script>
+    <script src="js/servicio_genero.js"></script>
+    <script src="js/servicio_sucursales.js"></script>  
 
 
 </body>
