--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -68,7 +68,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_librerias.js"></script>
+    <script src="js/servicio_admin_librerias.js"></script>
     <script src="js/controlador_registrar_libreria.js"></script>
+    <script src="js/controlador_registrar_admin_libreria.js"></script>
 
 </body>
 
