agrego listar categorias, filtrar cateorias, registrar usuarios

--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -89,8 +89,8 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    <script src="js/servicio_cliente.js"></script>
-    <script src="js/controlador_registrar_cliente.js"></script>
+    <script src="js/servicio_usuario.js"></script>
+    <script src="js/controlador_registrar_usuario.js"></script>
   
     
   </body>
