--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -67,6 +67,8 @@
 
          <input id="txt_nombre_usuario"  type="text"  placeholder = "Nombre Usuario" >
 
+         <input id="txt_contrasena" type="text" placeholder="Contraseña">
+
          <input id="img_avatar"  type="image"  placeholder = "Avatar" >
 
 
