--- a/base/public/registrar_sucursal.html
+++ b/base/public/registrar_sucursal.html
@@ -29,7 +29,7 @@
 
             <section id="datos">
                 <input id="txt_nombre" type="text" placeholder="Nombre">
-                <input id="txt_telefono" type="number" placeholder="Teléfono">
+                <input id="txt_telefono" type="text" placeholder="Teléfono">
                 <input id="txt_correo" type="text" placeholder="Correo">
                 <textarea name="" id="txt_direccion" placeholder="Dirección"></textarea>
             </section>
