--- a/base/public/index.html
+++ b/base/public/index.html
@@ -68,12 +68,16 @@
                 <h1>¡Construye tu propia librería!</h1>
                 <p>Bambooks te ofrece variedad en géneros y autores</p>
             </div>
+
+
         </section>
 
         <section id="booklists">
 
         </section>
-
+        <section>
+            aber 
+        </section>
     </main>
 
 
@@ -87,6 +91,7 @@
    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
+    
   
 
 </body>
