--- a/base/public/registrar_categoria.html
+++ b/base/public/registrar_categoria.html
@@ -28,7 +28,9 @@
 
         <li>
           <a href="">JDiego</a>
-          <li><a id = "cerrar_sesion" href="">Cerrar Sesión</a></li>
+         <!-- <li><a id = "cerrar_sesion" href="">Cerrar Sesión</a></li> -->
+         <button type ="button" class ="boton_cerrar" id="btn_cerrar">Cerrar sesion</button>
+         
         </li>
        </ul>
         
@@ -60,6 +62,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_categoria.js"></script>
     <script src="js/controlador_registrar_categoria.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
+
   </body>
 
   </html>
