--- a/base/public/listar_libros_card.html
+++ b/base/public/listar_libros_card.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Listar Libros</title>
+    <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/listar_libros_card.css">
     <title>Listar Libros</title>
 </head>
 <body>
+        <nav>
+                <img src="imgs/panda color grain.png" alt="">
+        
+                <ul>
+                    <li> <a href="">Axel</a> </li>
+                    <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
+                </ul>
+            </nav>
     <section id="lista_libros">
 
     </section>
