--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -59,11 +59,14 @@
 
             <input id="txt_correo" type="text" placeholder="Correo">
             <input id="txt_nombre_usuario" type="text" placeholder="Nombre Usuario">
-            <input id="txt_contrasena" type="text" placeholder="Contraseña">
 
         </section>
 
         <button id="btn_registrar"> Registrar </button>
+
+        <footer>
+            
+        </footer>
 
     </main>
     
