--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -71,9 +71,9 @@
 
          <div class="subir_avatar">
           <figure class="portada">
-              <img src="imgs/img.png" alt="Seleccionar imagen" id="img_preview">
+              <img src="imgs/img.png" alt="Seleccionar imagen" id="img_avatar">
           </figure>
-          <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Subir imagen </button>
+          <button type="button" id="btn_seleccionar_avatar" class="boton_subir_avatar">Subir imagen </button>
       </div>
 
       
@@ -93,12 +93,21 @@
 
     </main>
 
+
+    <script src="js/jquery-3.3.1.js"></script>   
+
     <script src="js/stringProvincias.js"></script>
     <script src = "js/ubicacion.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_registrar_usuario.js"></script>
+
+    <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
+    <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script src="js/servicio_avatar.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   
     
   </body>
