--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -45,6 +45,8 @@
             <h2>Datos del Administrador de Librería</h2>
 
             <input id="txt_identificacion" type="text" placeholder="Identificación">
+            <output id="txtIdExiste"></output>
+
             <input id="txt_primer_nombre" type="text" placeholder="Primer Nombre">
             <input id="txt_segundo_nombre" type="text" placeholder="Segundo Nombre">
             <input id="txt_primer_apellido" type="text" placeholder="Primer Apellido">
@@ -58,6 +60,8 @@
             </select>
 
             <input id="txt_correo" type="text" placeholder="Correo">
+            <output id="txtCorreoExiste"></output>
+
             <input id="txt_nombre_usuario" type="text" placeholder="Nombre Usuario">
 
         </section>
