--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -28,6 +28,7 @@
 
             <h1>Listar Librerías</h1>
 
+            <label for="txt_filtro">Filtrar</label>
             <input id="txt_filtro" type="text">
 
             <table id="tbl_librerias">
