--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -21,6 +21,7 @@
         <a href="listar_librerias.html">Librerias</a>
         <a href="%20clubesLectura.html">Clubes de Lectura</a>
         <a href="listar_libros.html">Libros</a>
+        <a href="listar-autores.html">Autores</a>
         <a href="#">Intercambios</a>
       </div>
       <div class="optionsNav">
@@ -31,7 +32,7 @@
           <a href="#">Link 3</a>
         </div>
         <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px" alt="">
-        <button id="cerrar-sesion">Cerrar Sesion</button>
+        <button id="btn_cerrar">Cerrar Sesion</button>
       </div>
     </nav>
   </header>
@@ -115,6 +116,8 @@
   </footer>
 
   <script src="js/carousels.js"></script>
+  <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="js/noback.js"></script>
 </body>
 
 </html>
