--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -58,7 +58,10 @@
 
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="js/noback.js"></script>
+
         <script src="js/servicio_librerias.js"></script>
+
         <script src="js/controlador_listar_librerias.js"></script>
         <script src="js/controlador_cerrar_sesion.js"></script>
     
