--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -43,7 +43,7 @@
         <section id="ofertas">
                 <button type="button" class="btn-registrar-oferta" id="btn-registrar-oferta">Registrar Oferta</button>
                 <div>
-                        <img src="" alt="" id="image_preview2">
+                        <img src="" alt="" id="image_preview2" width="800" height="300">
                 </div>
         
                 <div class="contenedor">
