nav style and name

--- a/base/public/index.html
+++ b/base/public/index.html
@@ -161,7 +161,7 @@
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador-index.js"></script>
     <script src="js/landingVisitor.js"></script>
-
+    <script src="js/noback.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
 
