--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/landingClienteIniciado.css">
   <link rel="stylesheet" href="css/carousels.css">
+  <link rel="stylesheet" href="css/navbar.css">
 </head>
 
 <body>
@@ -14,8 +15,8 @@
     <nav>
       <div class="logoBambooks">
         <a href="#"><img
-            src="https://images.vexels.com/media/users/3/145065/isolated/preview/a7fc3e4125ad773b012e4360885ea6ac-panda-illustration-by-vexels.png"
-            alt="" width="50px"></a>
+            src="imgs/panda_grain.png"
+            alt="" width="40px"></a>
       </div>
       <div class="nav-container">
         <a href="listar_librerias.html">Librerias</a>
@@ -25,7 +26,7 @@
         <a href="#">Intercambios</a>
       </div>
       <div class="optionsNav">
-        <a href="" class="perfil">Mi perfil</a>
+        <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
           <a href="#">Link 2</a>
@@ -117,7 +118,7 @@
 
   <script src="js/carousels.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
-  <script src="js/noback.js"></script>
+  <script src="js/getNombre.js"></script>
 </body>
 
 </html>
