--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -12,29 +12,37 @@
     <title>Registrar Categoría</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_categorias.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
 
   </head>
 
-  <body>
-
-    
-
+  <header>
       <nav>
-
-        <img src="imgs/panda color grain.png" alt="">
-
-       <ul>
-
-        <li>
-          <a href="">JDiego</a>
-          <li><a id = "cerrar_sesion" href="">Cerrar Sesión</a></li>
-        </li>
-       </ul>
-        
-
+          <div class="logoBambooks">
+              <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
+          </div>
+          <div class="nav-container">
+              <a href="listar_librerias.html">Librerias</a>
+              <a href="%20clubesLectura.html">Clubes de Lectura</a>
+              <a href="listar_libros.html">Libros</a>
+              <a href="listar-autores.html">Autores</a>
+              <a href="#">Intercambios</a>
+          </div>
+          <div class="optionsNav">
+              <a href="" class="perfil">Mi perfil</a>
+              <div class="dropdown-content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+              </div>
+              <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
+                  alt="">
+              <button id="btn_cerrar">Cerrar Sesion</button>
+          </div>
       </nav>
-
+  </header>
+  <body>
       <main>
 
         <h1>Listar Categorías</h1>
