--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -8,17 +8,37 @@
     <title>Listar Libros</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/listar_libros.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 
-<body>
-    <nav>
-        <img src="imgs/panda color grain.png" alt="">
 
-        <ul>
-            <li> <a href="">Axel</a> </li>
-            <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
-        </ul>
-    </nav>
+<header>
+        <nav>
+            <div class="logoBambooks">
+                <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
+            </div>
+            <div class="nav-container">
+                <a href="listar_librerias.html">Librerias</a>
+                <a href="%20clubesLectura.html">Clubes de Lectura</a>
+                <a href="listar_libros.html">Libros</a>
+                <a href="listar-autores.html">Autores</a>
+                <a href="#">Intercambios</a>
+            </div>
+            <div class="optionsNav">
+                <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
+                    alt="">
+                <button id="btn_cerrar">Cerrar Sesion</button>
+            </div>
+        </nav>
+    </header>
+<body>
+    
     <main>
         <h1>Listar libros</h1>
         <table id="tbl_libros">
@@ -49,6 +69,7 @@
     <script src="js/controlador_listar_libros.js"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/getNombre.js"></script>
 
 </body>
 
