--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -8,21 +8,39 @@
     <title>Perfil Librería</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/visualizar_perfil_libreria.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 
 
+<header>
+        <nav>
+            <div class="logoBambooks">
+                <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
+            </div>
+            <div class="nav-container">
+                <a href="listar_librerias.html">Librerias</a>
+                <a href="%20clubesLectura.html">Clubes de Lectura</a>
+                <a href="listar_libros.html">Libros</a>
+                <a href="listar-autores.html">Autores</a>
+                <a href="#">Intercambios</a>
+            </div>
+            <div class="optionsNav">
+                <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
+                    alt="">
+                <button id="btn_cerrar">Cerrar Sesion</button>
+            </div>
+        </nav>
+    </header>
+
 <body>
 
-    <nav>
 
-        <img src="imgs/panda_grain.png" alt="">
-        
-        <ul>
-            <li> <a href="">Naty</a> </li>
-            <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
-        </ul>
-
-    </nav>
 
     <main>
 
@@ -48,6 +66,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_librerias.js"></script>
     <script src="js/controlador_perfil_libreria.js"></script>
+    <script src="js/getNombre.js"></script>
 
 </body>
 
