--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -42,7 +42,7 @@
 
         <section id="ofertas">
 
-            <button type="button" class="btn-registrar-oferta" id="btn-registrar-oferta">Registrar Oferta</button>7
+            <button type="button" class="btn-registrar-oferta" id="btn-registrar-oferta">Registrar Oferta</button>
 
             <div>
                 <img src="" alt="" id="image_preview2" >
