--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -26,7 +26,7 @@
         <a href="#">Intercambios</a>
       </div>
       <div class="optionsNav">
-        <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+          <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
           <a href="#">Link 2</a>
@@ -118,6 +118,7 @@
 
   <script src="js/carousels.js"></script>
   <script src="js/controlador_cerrar_sesion.js"></script>
+  <script src="js/noback.js"></script>
   <script src="js/getNombre.js"></script>
 </body>
 
