--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/registrar-autor.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css"
         rel="stylesheet" type="text/css" />
     <script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -15,17 +16,35 @@
 
 </head>
 
+<header>
+        <nav>
+            <div class="logoBambooks">
+                <a href="#"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
+            </div>
+            <div class="nav-container">
+                <a href="listar_librerias.html">Librerias</a>
+                <a href="%20clubesLectura.html">Clubes de Lectura</a>
+                <a href="listar_libros.html">Libros</a>
+                <a href="listar-autores.html">Autores</a>
+                <a href="#">Intercambios</a>
+            </div>
+            <div class="optionsNav">
+                    <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
+                    alt="">
+                <button id="btn_cerrar">Cerrar Sesion</button>
+            </div>
+        </nav>
+    </header>
+
+
+
 <body>
-    <nav>
-
-        <img src="imgs/panda_grain.png" alt="">
-
-        <ul>
-            <li> <a href="" id="perfil">Fabz</a> </li>
-            <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
-        </ul>
-
-    </nav>
     <main>
 
         <h1>Registrar Autor</h1>
@@ -318,6 +337,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio-autor.js"></script>
     <script src="js/controlador-autor.js "></script>
+    <script src="js/getNombre.js"></script>
+
 </body>
 
 </html>
