--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -82,8 +82,10 @@
                                         <figure class="image_holder">
                                             <img src="imgs/noimage.png" alt="seleccionar imagen" id="image_preview">
                                         </figure>
-
-                                        <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Subir Oferta </button>
+                                        
+                                        
+                                        <button type="button" id="btn_seleccionar_imagen" class="boton_subir_imagen">Seleccionar Imagen </button>
+                                        <button type="button" id="subir_oferta" class="btn_subir_oferta">Subir Oferta </button>
                                     </div>
                                 </form>
                             </div>
