--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -26,9 +26,9 @@
 
         <div class="datos">  
 
-            <p class="dato"><span id=""</p>
+                <p><span id="avatar"></span></p>
                 
-                <p class="dato"> <span id="txt_correo"> correo </span></p>
+                <p class="dato"> <span id="txt_nombre">Usuario</span></p>
 
             <p class="dato"> <span id="txt_correo"> Correo </span></p>
     
