--- a/base/public/listar_libros_card.html
+++ b/base/public/listar_libros_card.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <nav>
-                <img src="imgs/panda color grain.png" alt="">
+                <img src="imgs/panda_grain.png" alt="">
         
                 <ul>
                     <li> <a href="">Axel</a> </li>
