--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <img src="imgs/panda color grain.png" alt="">
+        <img src="imgs/panda_grain.png" alt="">
 
         <ul>
             <li> <a href="">Axel</a> </li>
@@ -45,17 +45,8 @@
                 <input id="txt_isbn" type="number" placeholder="ISBN">
 
                 <select name="genero" id="txt_genero">
-                    <option value="">Género</option>
-                    <option value="Ciencia Ficción">Ciencia Ficción</option>
-                    <option value="Auto ayuda">Auto ayuda</option>
-                    <option value="Novela">Novela</option>
-                    <option value="Novela Romántica">Novela Romántica</option>
-                    <option value="Historia">Historia</option>
-                    <option value="Investigación">Investigación</option>
-                    <option value="Infantil">Infantil</option>
-                    <option value="Economía">Economía</option>
-                    <option value="Sociedad">Sociedad</option>
-                    <option value="Deportes">Deportes</option>
+                    <option value=""> Seleccionar género</option>
+                    
                 </select>
 
                 <select name="tipo" id="txt_tipo">
@@ -82,6 +73,7 @@
     <script src="js/controlador_registrar_libro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_libro.js"></script>
+    <script src="js/servicio_genero.js"></script>
 
     <!-- Script servicio subir imagen, clodinari -->
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
