--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -49,7 +49,9 @@
         <div class="filtrar">
             <label for="buscarClub">Buscar Club de Lectura</label>
             <input type="text" placeholder="Buscar" id="buscarClub">
+            <button id="btnBuscarClub">Buscar</button>
         </div>
+        
         <div class="botonesClubes">
             <button class="btn2" id="btnRegistrarClub">Registrar Club</button>
             <button class="btn2" id="btnListarMisClubes">Mis Clubes</button>
@@ -155,9 +157,6 @@
         </div>
 
         <section id="clubes">
-
-
-
 
         </section>
 
