--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -23,6 +23,8 @@
         <a href="%20clubesLectura.html">Clubes de Lectura</a>
         <a href="listar_libros.html">Libros</a>
         <a href="listar-autores.html">Autores</a>
+        <a href="listar_genero.html">Géneros</a>
+        <a href="listar_categoría.html">Categoria</a>
         <a href="#">Intercambios</a>
       </div>
       <div class="optionsNav">
@@ -120,6 +122,7 @@
   <script src="js/controlador_cerrar_sesion.js"></script>
   <script src="js/noback.js"></script>
   <script src="js/getNombre.js"></script>
+  
 </body>
 
 </html>
