--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -30,7 +30,7 @@
               <a href="#">Intercambios</a>
           </div>
           <div class="optionsNav">
-              <a href="" class="perfil">Mi perfil</a>
+              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
               <div class="dropdown-content">
                   <a href="#">Link 1</a>
                   <a href="#">Link 2</a>
@@ -38,7 +38,7 @@
               </div>
               <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
                   alt="">
-              <button id="btn_cerrar">Cerrar Sesion</button>
+                  <button id="btn_cerrar">Cerrar Sesion</button>
           </div>
       </nav>
   </header>
@@ -70,6 +70,8 @@
 
       </main>
 
+      <script src="js/getNombre.js"></script>
+      <script src="js/controlador_cerrar_sesion.js"></script>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="js/servicio_categoria.js"></script>
       <script src="js/controlador_listar_categorias.js"></script>
