--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -42,8 +42,12 @@
     <main>
         <h1>Libros</h1>
 
+        
+        <label for="txt_filtro">Filtrar</label>
         <input type="text" id="txt_filtro">
         
+        <a href="registrar_libro.html" id="btnNuevoLibro">Nuevo Libro</a>
+
         <table id="tbl_libros">
             <thead>
                 <tr>
