--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -17,30 +17,26 @@
 </head>
 
 <header>
-        <nav>
-            <div class="logoBambooks">
-                <a href="#"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
-            </div>
-            <div class="nav-container">
-                <a href="listar_librerias.html">Librerias</a>
-                <a href="%20clubesLectura.html">Clubes de Lectura</a>
-                <a href="listar_libros.html">Libros</a>
-                <a href="listar-autores.html">Autores</a>
-                <a href="#">Intercambios</a>
-            </div>
-            <div class="optionsNav">
-                    <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
-                <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
-                    alt="">
-                <button id="btn_cerrar">Cerrar Sesion</button>
-            </div>
-        </nav>
-    </header>
+    <nav>
+        <div class="logoBambooks">
+            <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
+        </div>
+        <div class="nav-container">
+            <a href="listar_librerias.html">Librerias</a>
+            <a href="%20clubesLectura.html">Clubes de Lectura</a>
+            <a href="listar_libros.html">Libros</a>
+            <a href="listar-autores.html">Autores</a>
+            <a href="#">Intercambios</a>
+        </div>
+        <div class="optionsNav">
+            <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+
+            <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
+                alt="">
+            <button id="btn_cerrar">Cerrar Sesion</button>
+        </div>
+    </nav>
+</header>
 
 
 
@@ -327,11 +323,11 @@
         </section>
 
         <center>
-        
-                <button type="button" id="btn">Registrar</button>
-                <a href="listar-autores.html"><button type="button" id="btn">Volver</button></a>
-        
-    </center>
+
+            <button type="button" id="btn-registrar-autor">Registrar</button>
+            <a href="listar-autores.html"><button type="button" id="btn">Volver</button></a>
+
+        </center>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
