--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -100,6 +100,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/noback.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
 
     <script src="js/servicio_librerias.js"></script>
