--- a/base/public/crear_contrasenna.html
+++ b/base/public/crear_contrasenna.html
@@ -24,7 +24,6 @@
           </div>
           
           <div class="optionsNav">
-              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
               <button id="btn_cerrar">Cerrar Sesion</button>
           </div>
       </nav>
@@ -53,7 +52,7 @@
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
       <script src = "js/servicio_usuario.js"></script>
       <script src = "js/controlador_crearContrasenna.js"></script>
-      <script src="js/getNombre.js"></script>
+      <script src="js/controlador_cerrar_sesion.js"></script>
 
 
 
