--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -2,8 +2,6 @@
 <html lang="es">
 
 <head>
-   
-  
   <title>Bambooks</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/reset.css">
@@ -28,7 +26,7 @@
         <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
         <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
         <a href="#" id="optionIntercambio">Intercambios</a>
-        <a href="#" id="optionNavUsuarios">Usuarios</a>
+        <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
       </div>
       <div class="optionsNav">
           <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
