--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/landingPageVisitor.css">
     <link rel="stylesheet" href="css/clubLectura.css">
     <link rel="stylesheet" href="css/navbar.css">
-    
+
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -23,11 +23,14 @@
             <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
         </div>
         <div class="nav-container">
-            <a href="listar_librerias.html">Librerias</a>
-            <a href="%20clubesLectura.html">Clubes de Lectura</a>
-            <a href="listar_libros.html">Libros</a>
-            <a href="listar-autores.html">Autores</a>
-            <a href="#">Intercambios</a>
+            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
+            <a href="listar_libros.html" id="optionNavLibros">Libros</a>
+            <a href="listar-autores.html" id="optionNavAutores">Autores</a>
+            <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
+            <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+            <a href="#" id="optionIntercambio">Intercambios</a>
+            <a href="#" id="optionNavUsuarios">Usuarios</a>
         </div>
         <div class="optionsNav">
             <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
@@ -51,7 +54,7 @@
             <input type="text" placeholder="Buscar" id="buscarClub">
             <button id="btnBuscarClub">Buscar</button>
         </div>
-        
+
         <div class="botonesClubes">
             <button class="btn2" id="btnRegistrarClub">Registrar Club</button>
             <button class="btn2" id="btnListarMisClubes">Mis Clubes</button>
