--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -8,19 +8,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/listar_usuarios.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 
-<body>
+<header>
         <nav>
+          <div class="logoBambooks">
+            <a href="inicioCliente.html"><img
+                src="imgs/panda_grain.png"
+                alt="" width="40px"></a>
+          </div>
+          <div class="nav-container">
+            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
+            <a href="listar_libros.html" id="optionNavLibros">Libros</a>
+            <a href="listar-autores.html" id="optionNavAutores">Autores</a>
+            <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
+            <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+            <a href="#" id="optionIntercambio">Intercambios</a>
+            <a href="#" id="optionNavUsuarios">Usuarios</a>
+          </div>
+          <div class="optionsNav">
+              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+            <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px" alt="">
+            <button id="btn_cerrar">Cerrar Sesion</button>
+          </div>
+        </nav>
+      </header>
 
-                <img src="imgs/panda_grain.png" alt="">
-        
-                <ul>
-                    <li> <a href="" id="perfil">Fabz</a> </li>
-                    <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
-                </ul>
-        
-            </nav>
+<body>
+
             <main>
     <input type="text" id="txt_filtro" placeholder="Filtrar Correo/Identificación" style="width: 170px">
     <a href="registrar_cliente.html"><button>Registrar Usuario</button></a>
@@ -42,6 +64,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador-listar-usuarios.js"></script>
+    <script src="js/getNombre.js"></script>
 </body>
 
 </html>
