--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -8,20 +8,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/registrar_libro.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
 </head>
 
 
+<header>
+        <nav>
+          <div class="logoBambooks">
+            <a href="inicioCliente.html"><img
+                src="imgs/panda_grain.png"
+                alt="" width="40px"></a>
+          </div>
+          <div class="nav-container">
+            <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
+            <a href="listar_libros.html" id="optionNavLibros">Libros</a>
+            <a href="listar-autores.html" id="optionNavAutores">Autores</a>
+            <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
+            <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+            <a href="#" id="optionIntercambio">Intercambios</a>
+            <a href="#" id="optionNavUsuarios">Usuarios</a>
+          </div>
+          <div class="optionsNav">
+              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+            <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px" alt="">
+            <button id="btn_cerrar">Cerrar Sesion</button>
+          </div>
+        </nav>
+      </header>
 <body>
-    <nav>
-        <img src="imgs/panda_grain.png" alt="">
-
-        <ul>
-            <li> <a href="">Axel</a> </li>
-            <li> <a class="cerrar_sesion" href="">Cerrar Sesión</a> </li>
-        </ul>
-    </nav>
-
 
     <main>
         <h1>Registrar Libro</h1>
@@ -70,6 +91,8 @@
     
 <script src="js/jquery-3.3.1.js"></script>
 }   <!-- script controlador -->
+
+<script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/controlador_registrar_libro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_libro.js"></script>
@@ -80,6 +103,8 @@
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_imagen.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/getNombre.js"></script>
+    
 </body>
 
 </html>
