--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -13,10 +13,11 @@
 </head>
 
 
+
 <header>
         <nav>
           <div class="logoBambooks">
-            <a href="inicioCliente.html"><img
+            <a href="#"><img
                 src="imgs/panda_grain.png"
                 alt="" width="40px"></a>
           </div>
@@ -28,7 +29,7 @@
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
-            <a href="#" id="optionNavUsuarios">Usuarios</a>
+            <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
           </div>
           <div class="optionsNav">
               <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
@@ -104,6 +105,7 @@
     <script src="js/servicio_imagen.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
+    
     
 </body>
 
