--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="css/navbar.css">
 </head>
 
-
 <header>
         <nav>
           <div class="logoBambooks">
-            <a href="inicioCliente.html"><img
+            <a href="#"><img
                 src="imgs/panda_grain.png"
                 alt="" width="40px"></a>
           </div>
@@ -29,7 +28,7 @@
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
-            <a href="#" id="optionNavUsuarios">Usuarios</a>
+            <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
           </div>
           <div class="optionsNav">
               <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
@@ -43,6 +42,7 @@
           </div>
         </nav>
       </header>
+
 
 <body>
 
