--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -18,11 +18,13 @@
 </head>
 
 <header>
-    <nav>
-        <div class="logoBambooks">
-            <a href="inicioCliente.html"><img src="imgs/panda_grain.png" alt="" width="40px"></a>
-        </div>
-        <div class="nav-container">
+        <nav>
+          <div class="logoBambooks">
+            <a href="#"><img
+                src="imgs/panda_grain.png"
+                alt="" width="40px"></a>
+          </div>
+          <div class="nav-container">
             <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
@@ -30,22 +32,20 @@
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
-            <a href="#" id="optionNavUsuarios">Usuarios</a>
-        </div>
-        <div class="optionsNav">
-            <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+            <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
+          </div>
+          <div class="optionsNav">
+              <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
             </div>
-            <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px"
-                alt="">
+            <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px" alt="">
             <button id="btn_cerrar">Cerrar Sesion</button>
-        </div>
-    </nav>
-</header>
-
+          </div>
+        </nav>
+      </header>
 <body>
 
     <main>
@@ -173,6 +173,7 @@
     <script src="js/servicio_genero.js"></script>
     <script src="js/servicio_sucursales.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 
 
 </body>
