--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -16,10 +16,11 @@
 
 </head>
 
+
 <header>
         <nav>
           <div class="logoBambooks">
-            <a href="inicioCliente.html"><img
+            <a href="#"><img
                 src="imgs/panda_grain.png"
                 alt="" width="40px"></a>
           </div>
@@ -31,7 +32,7 @@
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
-            <a href="#" id="optionNavUsuarios">Usuarios</a>
+            <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
           </div>
           <div class="optionsNav">
               <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
@@ -342,6 +343,7 @@
     <script src="js/servicio-autor.js"></script>
     <script src="js/controlador-autor.js "></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 
 </body>
 
