--- a/base/public/registrar_categoria.html
+++ b/base/public/registrar_categoria.html
@@ -20,7 +20,7 @@
   <header>
       <nav>
         <div class="logoBambooks">
-          <a href="inicioCliente.html"><img
+          <a href="#"><img
               src="imgs/panda_grain.png"
               alt="" width="40px"></a>
         </div>
@@ -32,7 +32,7 @@
           <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
           <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
           <a href="#" id="optionIntercambio">Intercambios</a>
-          <a href="#" id="optionNavUsuarios">Usuarios</a>
+          <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
         <div class="optionsNav">
             <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
