commit registros navbar

--- a/base/public/index.html
+++ b/base/public/index.html
@@ -133,17 +133,21 @@
                     <h3> cuenta </h3>
                     <form>
                         <label> nombre </label>
-                        <input type="text" name="nombre" placeholder="nombre">
+                        <input type="text" name="nombre" placeholder="nombre" id="footerUser">
                         <label class="pw"> contraseña </label>
-                        <input type="password" name="password" placeholder="contraseña">
-                        <input type="button" class="button" value="iniciar">
-                        <input type="button" class="button" value="registrarme">
+                        <input type="password" name="password" placeholder="contraseña" id="footerPw">
+
+                        <p id="input_error_footer">Por favor revise los campos en rojo</p>
+
+                        <input type="button" class="button" value="iniciar" id="signinfooter">
+                        <input type="button" class="button" value="registrarme" id="btn_registroenLinea">
                         <a href="#" class="pwreset">olvidé mi contraseña</a>
+                      
                     </form>
                 </div>
                 <div class="footfour">
                     <h2>¿querés que tu librería aparezca en nuestro sitio?</h2>
-                    <input type="button" class="buttonArt" value="mandar solicitud">
+                    <input type="button" class="buttonArt" value="mandar solicitud" id="btn_registroLibreria">
                 </div>
                 <div class="footfive">
                     <p>Bambooks Tienda de Libros Virtual</p>
