--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -77,6 +77,7 @@
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 
 </body>
 
