--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -13,17 +13,43 @@
     <link rel="stylesheet" href="css/reset.css">
     <title>Registro</title>
     <link rel="stylesheet" href="css/registrar_cliente.css">
+    <link rel="stylesheet" href="css/navbar.css">
 
 
   </head>
 
+  <header>
+      <nav>
+        <div class="logoBambooks">
+          <a href="#" id="logoRedirect"><img
+              src="imgs/panda_grain.png"
+              alt="" width="40px"></a>
+        </div>
+        <div class="nav-container" id='nav-content'>
+          <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+          <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
+          <a href="listar_libros.html" id="optionNavLibros">Libros</a>
+          <a href="listar-autores.html" id="optionNavAutores">Autores</a>
+          <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
+          <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+          <a href="#" id="optionIntercambio">Intercambios</a>
+          <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
+        </div>
+        <div class="optionsNav" id="optionsNav">
+            <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+          <img src="https://icon-library.net/images/cart-icon-png-white/cart-icon-png-white-6.jpg" width="25px" alt="">
+          <button id="btn_cerrar">Cerrar Sesion</button>
+        </div>
+      </nav>
+    </header>
+
   <body>
-      
-    <nav>
-
-        <img src="imgs/panda_grain.png" alt="">         
-
-    </nav>
+    
 
     <main>
 
@@ -106,6 +132,7 @@
     <script src='https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js' type='text/javascript'></script>
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_avatar.js"></script>
+    <script src="js/notSignedIn.js"></script>
    
 
   
