--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -78,7 +78,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
-
+    <script src="js/servicio_libro.js"></script>
+    <script src="js/controlador_listar_libros.js"></script>
+   
 </body>
 
 
