--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -9,7 +9,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/landingPageVisitor.css">
+   
     <link rel="stylesheet" href="css/clubLectura.css">
     <link rel="stylesheet" href="css/navbar.css">
 
@@ -174,6 +174,9 @@
     <script src="js/servicio_sucursales.js"></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/servicio_libro.js"></script>
+    <script src="js/servicio_categoria.js"></script>
+    <script src="js/servicio_librerias.js"></script>
 
 
 </body>
