--- a/base/public/registrar-evento.html
+++ b/base/public/registrar-evento.html
@@ -65,6 +65,7 @@
     <script src="js/servicio-evento.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/servicio_libro.js"></script>
 
 </body>
 
