--- a/base/public/listar_tarjetas.html
+++ b/base/public/listar_tarjetas.html
@@ -55,6 +55,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_tarjeta.js"></script>
     <script src="js/controlador_listar_tarjetas.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 </body>
 
 </html>
