--- a/base/public/listar_ofertas.html
+++ b/base/public/listar_ofertas.html
@@ -40,20 +40,18 @@
       </header>
 
 <body>
-        <div class="container">
+
 
                 <div class="galerias">
                     <div class="slideshow-container" id="daddy">
                         <p>Ofertas</p>
-                        <div class="mySlides">
-                            <img src=>
-    <div class="mySlides">
-        <img
-            src=>
 
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
 
+                </div>
+    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_oferta.js"></script>
     <script src="js/controlador_listarofertas.js"></script>
