--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -68,6 +68,16 @@
                         <img src="" alt="" id="image_preview2" width="800" height="300">
                 </div>
 
+                <div class="galerias">
+                        <div class="slideshow-container" id="daddy">
+                            <p>Ofertas</p>
+    
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+    
+                    </div>
+
                 <div class="contenedor">
 
                     <div class="overlay" id="overlay">
@@ -113,6 +123,8 @@
     <script src="js/controlador_perfil_libreria.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/controlador_registrar_oferta.js"></script>
+    <script src="js/controlador_listarofertas.js"></script>
+
 
 
     <script src="js/getNombre.js"></script>
@@ -123,7 +135,6 @@
     <script src="js/servicio_img_prevista.js"></script>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
 
 
 </body>
