--- a/base/public/inicioCliente.html
+++ b/base/public/inicioCliente.html
@@ -42,7 +42,7 @@
   </header>
   <main>
     <div class="banner">
-      <h2>“El libro es fuerza, es valor, es fuerza, es alimento; antorcha del pensamiento y manantial del amor”</h2>
+      <h2>El que ama la lectura, tiene todo a su alcance</h2>
     </div>
     <div class="info-container">
       <div class="header">Bambooks</div>
