--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -65,6 +65,7 @@
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador-listar-usuarios.js"></script>
     <script src="js/getNombre.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
 </body>
 
 </html>
