asociar libreria - sucural

--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -86,6 +86,7 @@
         <script src="js/servicio_librerias.js"></script>
 
         <script src="js/controlador_listar_librerias.js"></script>
+        <script src="js/controlador_registrar_sucursal.js"></script>
         <script src="js/controlador_cerrar_sesion.js"></script>
         <script src="js/getNombre.js"></script>
     
