MENU LISTO FINAL

--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -20,7 +20,7 @@
 <header>
         <nav>
           <div class="logoBambooks">
-            <a href="#"><img
+            <a href="inicioCliente.html"><img
                 src="imgs/panda_grain.png"
                 alt="" width="40px"></a>
           </div>
@@ -166,7 +166,7 @@
 
 
     </main>
-  
+    <script src="js/servicio_librerias.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/controlador-listarClubLectura.js"></script>
     <script src="js/controlador-clubLectura.js"></script>
@@ -177,7 +177,8 @@
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="js/servicio_categoria.js"></script>
-    <script src="js/servicio_librerias.js"></script>
+    
+    <script src="js/servicio_sucursales.js"></script>
 
 
 </body>
