--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -20,17 +20,19 @@
   <header>
       <nav>
         <div class="logoBambooks">
-          <a href="#"><img
+          <a href="inicioCliente.html"><img
               src="imgs/panda_grain.png"
               alt="" width="40px"></a>
         </div>
         <div class="nav-container">
           <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+          <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
           <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
           <a href="listar_libros.html" id="optionNavLibros">Libros</a>
           <a href="listar-autores.html" id="optionNavAutores">Autores</a>
           <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
           <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+          <a href="listar_tarjetas.html">Tarjetas</a>
           <a href="#" id="optionIntercambio">Intercambios</a>
           <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
@@ -79,6 +81,7 @@
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="js/servicio_categoria.js"></script>
       <script src="js/controlador_listar_categorias.js"></script>
+   
     
 </body>
 
