--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -15,21 +15,23 @@
 <header>
     <nav>
       <div class="logoBambooks">
-        <a href="#" id="logoRedirect"><img
+        <a href="inicioCliente.html"><img
             src="imgs/panda_grain.png"
             alt="" width="40px"></a>
       </div>
-      <div class="nav-container" id='nav-content'>
+      <div class="nav-container">
         <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+        <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
         <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
         <a href="listar_libros.html" id="optionNavLibros">Libros</a>
         <a href="listar-autores.html" id="optionNavAutores">Autores</a>
         <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
         <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+        <a href="listar_tarjetas.html">Tarjetas</a>
         <a href="#" id="optionIntercambio">Intercambios</a>
         <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
       </div>
-      <div class="optionsNav" id="optionsNav">
+      <div class="optionsNav">
           <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
@@ -41,7 +43,6 @@
       </div>
     </nav>
   </header>
-
 
 <body>
     <main>
