--- a/base/public/index.html
+++ b/base/public/index.html
@@ -44,7 +44,7 @@
                     <div class="line"></div>
                     <form action="" id="formulario">
                         <label for="usuario">Usuario</label>
-                        <input id="txt-username" type="text" placeholder="Nombre de Usuario" id="usuario">
+                        <input id="txt-username" type="text" placeholder="Correo" id="usuario">
 
                         <label for="pw">Contraseña</label>
                         <input id="txt-contrasena" type="password" placeholder="Contraseña" id="pw">
