--- a/base/public/registrar_cliente.html
+++ b/base/public/registrar_cliente.html
@@ -21,11 +21,11 @@
   <header>
       <nav>
         <div class="logoBambooks">
-          <a href="inicioCliente.html"><img
+          <a href="" id="logoRedirect"><img
               src="imgs/panda_grain.png"
               alt="" width="40px"></a>
         </div>
-        <div class="nav-container">
+        <div class="nav-container" id="nav-containers">
           <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
           <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
           <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
@@ -37,7 +37,7 @@
           <a href="#" id="optionIntercambio">Intercambios</a>
           <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
         </div>
-        <div class="optionsNav">
+        <div class="optionsNav" id="optionsNavs">
             <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
           <div class="dropdown-content">
             <a href="#">Link 1</a>
@@ -135,6 +135,8 @@
     <script src="https://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <script src="js/servicio_avatar.js"></script>
     <script src="js/notSignedIn.js"></script>
+    <script src="js/controlador_cerrar_sesion.js"></script>
+
 
 
 
