--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -67,7 +67,7 @@
                 <span class="close">&times;</span>
                 <div class="sign-in">
                     <h1>Nuevo Club de Lectura</h1>
-                    <img src="imgs/pandauser.png" alt="">
+                    
                     <div class="line"></div>
                     <form action="" id="formulario-ClubLectura">
                         <label for="txt-clubLectura">Nombre del Club de Lectura</label>
@@ -109,7 +109,7 @@
                             <input type="time" value="08:30" step="600" id="horaClub">
                         </div>
 
-                        <div>
+                        <div id="frecuenciaClub">
                             <label for="">Frecuencia</label>
                             <select name="" id="frecuencia_club">
                                 <option value="Todos los días">Todos los días</option>
@@ -166,6 +166,7 @@
 
 
     </main>
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="js/servicio_librerias.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/controlador-listarClubLectura.js"></script>
@@ -177,7 +178,7 @@
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/servicio_libro.js"></script>
     <script src="js/servicio_categoria.js"></script>
-    
+
     <script src="js/servicio_sucursales.js"></script>
 
 
