--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -66,6 +66,8 @@
     </table>
 
 </main>
+
+<script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador-listar-usuarios.js"></script>
