--- a/base/public/listar_ofertas.html
+++ b/base/public/listar_ofertas.html
@@ -53,7 +53,7 @@
                     </div>
 
                 </div>
-    
+     <script src="js/jquery-3.3.1.js"></script>s
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_oferta.js"></script>
     <script src="js/controlador_listarofertas.js"></script>
