--- a/base/public/ver-perfil-usuario.html
+++ b/base/public/ver-perfil-usuario.html
@@ -64,7 +64,7 @@
 
     <a href="listar-usuarios.html"><button type="button">Volver</button></a>
 </main>
-
+<script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador-perfil-usuario.js"></script>
