--- a/base/public/crear_contrasenna.html
+++ b/base/public/crear_contrasenna.html
@@ -47,7 +47,7 @@
   
         <button type ="button" class ="boton_crear" id="btn_crear_contrasenna">Registrar</button>
       </main>
-
+      <script src="js/jquery-3.3.1.js"></script>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
       <script src = "js/servicio_usuario.js"></script>
