--- a/base/public/listar-autores.html
+++ b/base/public/listar-autores.html
@@ -64,6 +64,8 @@
     </center>
 
     </main>
+
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio-autor.js"></script>
     <script src="js/controlador-listar-autores.js"></script>
