--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -76,6 +76,7 @@
 
       </main>
 
+      <script src="js/jquery-3.3.1.js"></script>
       <script src="js/getNombre.js"></script>
       <script src="js/controlador_cerrar_sesion.js"></script>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
