--- a/base/public/listar_genero.html
+++ b/base/public/listar_genero.html
@@ -78,6 +78,7 @@
 
             </section>
         
+            <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
         <script src="js/servicio_genero.js"></script>
