--- a/base/public/listar_librerias.html
+++ b/base/public/listar_librerias.html
@@ -84,7 +84,7 @@
 
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+        <script src="js/jquery-3.3.1.js"></script>
         <script src="js/servicio_librerias.js"></script>
 
         <script src="js/controlador_listar_librerias.js"></script>
