--- a/base/public/listar_libros_card.html
+++ b/base/public/listar_libros_card.html
@@ -48,6 +48,7 @@
   <section id="lista_libros">
 
   </section>
+  <script src="js/jquery-3.3.1.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/servicio_libro.js"></script>
   <script src="js/controlador_listar_libros_card.js"></script>
