--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -73,7 +73,7 @@
         </main>
 
 
-
+        <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="js/servicio_sucursales.js"></script>
         <script src="js/controlador_listar_sucursales.js"></script>
