--- a/base/public/registrar-autor.html
+++ b/base/public/registrar-autor.html
@@ -340,6 +340,8 @@
 
         </center>
     </main>
+
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio-autor.js"></script>
