--- a/base/public/registrar_categoria.html
+++ b/base/public/registrar_categoria.html
@@ -70,7 +70,7 @@
     </main>
 
 
-   
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="js/servicio_categoria.js"></script>
