--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -15,11 +15,11 @@
 <header>
     <nav>
       <div class="logoBambooks">
-        <a href="inicioCliente.html"><img
+        <a href="" id="logoRedirect"><img
             src="imgs/panda_grain.png"
             alt="" width="40px"></a>
       </div>
-      <div class="nav-container">
+      <div class="nav-container" id="nav-containers">
         <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
         <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
         <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
@@ -31,7 +31,7 @@
         <a href="#" id="optionIntercambio">Intercambios</a>
         <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
       </div>
-      <div class="optionsNav">
+      <div class="optionsNav" id="optionsNavs">
           <a href="" class="perfil" id="nombrePerfil">Mi perfil</a>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
@@ -99,13 +99,14 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-    
+    <script src="js/jquery-3.3.1.js"></script>
+
     <script src="js/servicio_librerias.js"></script>
     <script src="js/servicio_usuario.js"></script>
     <script src="js/controlador_registrar_libreria.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/notSignedIn.js"></script>
-
+   
 
 </body>
 
