--- a/base/public/registrar_tarjeta.html
+++ b/base/public/registrar_tarjeta.html
@@ -85,7 +85,7 @@
     </form>
 
 
-
+    <script src="js/jquery-3.3.1.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 <script src="js/servicio_tarjeta.js"></script>
