--- a/base/public/ver_perfil_libro.html
+++ b/base/public/ver_perfil_libro.html
@@ -63,7 +63,7 @@
 
   </div>
 
-
+  <script src="js/jquery-3.3.1.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/servicio_libro.js"></script>
   <script src="js/controlador_perfil_libro.js"></script>
