--- a/base/public/visualizar_perfil_admin_libreria.html
+++ b/base/public/visualizar_perfil_admin_libreria.html
@@ -69,7 +69,7 @@
 
 
     </main>
-    
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_librerias.js"></script>
     <script src="js/controlador_perfil_libreria.js"></script>
