--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -62,6 +62,8 @@
     </div>
 
     </header>
+
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_admingeneral.js"></script>
     <script src="js/servicio_usuario.js"></script>
