--- a/base/public/listar_categoría.html
+++ b/base/public/listar_categoría.html
@@ -83,6 +83,8 @@
 
       </main>
 
+      <footer></footer>
+
       <script src="js/jquery-3.3.1.js"></script>
       <script src="js/getNombre.js"></script>
       <script src="js/controlador_cerrar_sesion.js"></script>
