--- a/base/public/registrar_categoria.html
+++ b/base/public/registrar_categoria.html
@@ -66,9 +66,7 @@
 
       <button type ="button" class ="boton_registrar" id="btn_registrar">Registrar</button>
 
-      <footer>
-        
-      </footer>
+      <footer></footer>
 
     </main>
 
