--- a/base/public/ver-perfil-usuario.html
+++ b/base/public/ver-perfil-usuario.html
@@ -64,6 +64,9 @@
 
     <a href="listar-usuarios.html"><button type="button">Volver</button></a>
 </main>
+
+<footer></footer>
+
 <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_usuario.js"></script>
