--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -166,6 +166,9 @@
 
 
     </main>
+
+    <footer></footer>
+
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/servicio_librerias.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
