--- a/base/public/listar-usuarios.html
+++ b/base/public/listar-usuarios.html
@@ -67,6 +67,8 @@
 
 </main>
 
+<footer></footer>
+
 <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/servicio_usuario.js"></script>
