--- a/base/public/listar_genero.html
+++ b/base/public/listar_genero.html
@@ -77,6 +77,8 @@
             <section id="generos_lista">
 
             </section>
+
+            <footer></footer>
         
             <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
