--- a/base/public/listar_libros.html
+++ b/base/public/listar_libros.html
@@ -78,6 +78,9 @@
         </table>
 
     </main>
+
+    <footer></footer>
+
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/getNombre.js"></script>
