--- a/base/public/listar_sucursales.html
+++ b/base/public/listar_sucursales.html
@@ -72,6 +72,8 @@
 
         </main>
 
+        <footer></footer>
+
 
         <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
