--- a/base/public/registrar-evento.html
+++ b/base/public/registrar-evento.html
@@ -80,6 +80,8 @@
   
     </main>
 
+    <footer></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
