--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -91,9 +91,7 @@
 
         <button id="btn_registrar"> Registrar </button>
 
-        <footer>
-
-        </footer>
+        <footer></footer>
 
     </main>
 
