--- a/base/public/registrar_libro.html
+++ b/base/public/registrar_libro.html
@@ -91,9 +91,11 @@
         </section>
 
     </main>
+
+    <footer></footer>
     
 <script src="js/jquery-3.3.1.js"></script>
-}   <!-- script controlador -->
+  <!-- script controlador -->
 
 <script src="js/controlador_cerrar_sesion.js"></script>
     <script src="js/controlador_registrar_libro.js"></script>
