--- a/base/public/registrar_sucursal.html
+++ b/base/public/registrar_sucursal.html
@@ -63,7 +63,12 @@
             </section>
 
             <button id="btn_registrar"> Registrar </button>
+
+
         </main>
+
+        <footer></footer>
+
         <script src="js/jquery-3.3.1.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
