--- a/base/public/registrar_tarjeta.html
+++ b/base/public/registrar_tarjeta.html
@@ -84,6 +84,8 @@
 
     </form>
 
+    <footer></footer>
+
 
     <script src="js/jquery-3.3.1.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
