--- a/base/public/visualizar_perfil_libreria.html
+++ b/base/public/visualizar_perfil_libreria.html
@@ -109,6 +109,9 @@
         </section>
 
     </main>
+
+    <footer></footer>
+
     <script src="js/jquery-3.3.1.js"></script>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
